--- a/src/EventPlanning.Web/wwwroot/css/components/footer.css
+++ b/src/EventPlanning.Web/wwwroot/css/components/footer.css
@@ -20,7 +20,7 @@
 }
 
 .footer-heading {
-    color: var(--color-white);
+    color: var(--color-static-white);
     font-family: var(--font-heading, serif), serif;
     font-weight: 700;
     margin-bottom: 1.5rem;
@@ -36,7 +36,7 @@
 }
 
 .footer-link:hover {
-    color: var(--color-white);
+    color: var(--color-static-white);
     transform: translateX(5px);
 }
 
@@ -57,7 +57,7 @@
 .social-icon-link:hover {
     background-color: var(--color-dark-teal);
     transform: translateY(-3px);
-    color: var(--color-white);
+    color: var(--color-static-white);
 }
 
 /* --- INPUT OVERRIDES --- */
@@ -94,7 +94,7 @@
     font-family: var(--font-heading, serif), serif;
     font-size: 2rem;
     font-weight: 800;
-    background: linear-gradient(135deg, var(--color-white), var(--color-ash-grey));
+    background: linear-gradient(135deg, var(--color-static-white), var(--color-ash-grey));
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
