--- a/src/EventPlanning.Web/Views/Home/Index.cshtml
+++ b/src/EventPlanning.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container mb-5" id="events-grid">
     <vc:event-filter controller-name="Home" action-name="Index" search-term="@Model.SearchTerm" type="@Model.Type"
-        from="@Model.From" to="@Model.To" sort-order="@ViewBag.CurrentSort" is-hero-overlay="true" show-search="false">
+        from="@Model.From" to="@Model.To" sort-order="@Model.SortOrder" is-hero-overlay="true" show-search="false">
     </vc:event-filter>
 
     @if (!Model.Events.Items.Any())
@@ -58,7 +58,7 @@
                     <li class="page-item @(Model.Events.PageNumber == 1 ? "disabled" : "")">
                         <a class="page-link" asp-action="Index" asp-route-page="@(Model.Events.PageNumber - 1)"
                             asp-route-searchTerm="@Model.SearchTerm" asp-route-type="@Model.Type"
-                            asp-route-sortOrder="@ViewBag.CurrentSort" asp-route-from="@Model.From?.ToString("yyyy-MM-dd")"
+                            asp-route-sortOrder="@Model.SortOrder" asp-route-from="@Model.From?.ToString("yyyy-MM-dd")"
                             asp-route-to="@Model.To?.ToString("yyyy-MM-dd")" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                             <span class="ms-1">Previous</span>
@@ -71,7 +71,7 @@
                         <li class="page-item @(pageNumber == Model.Events.PageNumber ? "active" : "")">
                             <a class="page-link" asp-action="Index" asp-route-page="@pageNumber"
                                 asp-route-searchTerm="@Model.SearchTerm" asp-route-type="@Model.Type"
-                                asp-route-sortOrder="@ViewBag.CurrentSort" asp-route-from="@Model.From?.ToString("yyyy-MM-dd")"
+                                asp-route-sortOrder="@Model.SortOrder" asp-route-from="@Model.From?.ToString("yyyy-MM-dd")"
                                 asp-route-to="@Model.To?.ToString("yyyy-MM-dd")">@pageNumber</a>
                         </li>
                     }
@@ -79,7 +79,7 @@
                     <li class="page-item @(Model.Events.PageNumber == Model.Events.TotalPages ? "disabled" : "")">
                         <a class="page-link" asp-action="Index" asp-route-page="@(Model.Events.PageNumber + 1)"
                             asp-route-searchTerm="@Model.SearchTerm" asp-route-type="@Model.Type"
-                            asp-route-sortOrder="@ViewBag.CurrentSort" asp-route-from="@Model.From?.ToString("yyyy-MM-dd")"
+                            asp-route-sortOrder="@Model.SortOrder" asp-route-from="@Model.From?.ToString("yyyy-MM-dd")"
                             asp-route-to="@Model.To?.ToString("yyyy-MM-dd")" aria-label="Next">
                             <span class="me-1">Next</span>
                             <span aria-hidden="true">&raquo;</span>
