fix(ui): resolve country code, date input, api key, and log privacy issues

--- a/src/EventPlanning.Web/Views/Event/Details.cshtml
+++ b/src/EventPlanning.Web/Views/Event/Details.cshtml
@@ -19,4 +19,4 @@
     </div>
 </div>
 
-<partial name="Partials/_EventModals" model="Model.Event" />
+<partial name="Partials/_EventModals" model="Model.Event" view-data='new ViewDataDictionary(ViewData) { { "Countries", Model.Countries } }' />
