refactor: clean up application and domain layers\n\n- Fix Guest entity constructor binding\n- Resolve nullability warnings in IdentityService\n- General code cleanup

--- a/src/EventPlanning.Web/Views/Event/Edit.cshtml
+++ b/src/EventPlanning.Web/Views/Event/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@using EventPlanning.Web.Models
-@using EventPlanning.Domain.Enums
-@model EventFormViewModel
+﻿@model EventFormViewModel
 
 @{
     ViewData["Title"] = "Edit Event";
