--- a/src/EventPlanning.Web/Views/Event/MyEvents.cshtml
+++ b/src/EventPlanning.Web/Views/Event/MyEvents.cshtml
@@ -1,6 +1,4 @@
-﻿@using EventPlanning.Web.Models
-@using EventPlanning.Domain.Enums
-@model EventListViewModel
+﻿@model EventListViewModel
 
 @{
     ViewData["Title"] = "My Events";
