--- a/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using EventPlanning.Domain.Entities
-@using EventPlanning.Infrastructure.Identity
+﻿@using EventPlanning.Infrastructure.Identity
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> SignInManager
