--- a/src/EventPlanning.Web/Views/Event/Create.cshtml
+++ b/src/EventPlanning.Web/Views/Event/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using EventPlanning.Web.Models
-@using EventPlanning.Domain.Enums
+﻿@using EventPlanning.Domain.Enums
 @model EventFormViewModel
 
 @{
