--- a/src/EventPlanning.Web/Views/Shared/_NewsletterModals.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_NewsletterModals.cshtml
@@ -12,7 +12,7 @@
                             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
                     </svg>
                 </div>
-                <h3 class="mb-3" style="font-family: var(--font-heading, serif); font-weight: 700;">Check Your Inbox!
+                <h3 class="mb-3" style="font-family: var(--font-heading, serif),serif; font-weight: 700;">Check Your Inbox!
                 </h3>
                 <p class="text-muted mb-4" id="newsletterSuccessMessage">
                     We've sent a confirmation link to your email. Please verify your subscription to start receiving
@@ -38,7 +38,7 @@
                             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                     </svg>
                 </div>
-                <h3 class="mb-3" style="font-family: var(--font-heading, serif); font-weight: 700;">Oops!</h3>
+                <h3 class="mb-3" style="font-family: var(--font-heading, serif),serif; font-weight: 700;">Oops!</h3>
                 <p class="text-muted mb-4" id="newsletterErrorMessage">
                     Something went wrong. Please try again.
                 </p>
